# YaseHAL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  build.zig.zon
boards/host/: host.json
examples/: build.zig  build.zig.zon
examples/hello_world/: hello.zig
interface/: build.zig  hal.zig
interface/interfaces/: uart.zig
socs/host/: host.json
